unpackaged/main/default/objects/Valuation__c/fields/ConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>ConfidenceScore__c</fullName>
    <label>Confidence Score</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>