unpackaged/main/default/objects/Valuation__c/fields/Laststatusupdate__c.field-meta.xml
<CustomField>
    <fullName>Laststatusupdate__c</fullName>
    <label>Last status update</label>
    <type>DateTime</type>
</CustomField>