unpackaged/main/default/objects/Valuation__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <label>Order ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>