unpackaged/main/default/objects/Valuation__c/fields/PropertyValue__c.field-meta.xml
<CustomField>
    <fullName>PropertyValue__c</fullName>
    <label>Property Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>