unpackaged/main/default/objects/Valuation__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CoreLogic</fullName>
            </value>
            <value>
                <fullName>Hometrack</fullName>
            </value>
            <value>
                <fullName>JLL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>