unpackaged/main/default/objects/Valuation__c/fields/Valuationdate__c.field-meta.xml
<CustomField>
    <fullName>Valuationdate__c</fullName>
    <label>Valuation date</label>
    <type>Date</type>
</CustomField>