unpackaged/main/default/objects/Valuation__c/fields/ValuationRequested__c.field-meta.xml
<CustomField>
    <fullName>ValuationRequested__c</fullName>
    <label>Deprecated Valuation Requested</label>
    <type>DateTime</type>
</CustomField>