unpackaged/main/default/objects/Valuation__c/fields/ValuationStatus__c.field-meta.xml
<CustomField>
    <fullName>ValuationStatus__c</fullName>
    <label>Valuation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>