unpackaged/main/default/objects/Valuation__c/fields/ValuationType__c.field-meta.xml
<CustomField>
    <fullName>ValuationType__c</fullName>
    <label>Valuation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AVM Soft</fullName>
            </value>
            <value>
                <fullName>AVM</fullName>
            </value>
            <value>
                <fullName>Desktop Valuation</fullName>
            </value>
            <value>
                <fullName>Full Valuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>