unpackaged/main/default/objects/Valuation__c/fields/VendorId__c.field-meta.xml
<CustomField>
    <fullName>VendorId__c</fullName>
    <label>Vendor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>