unpackaged/main/default/objects/Valuation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ConfidenceScore__c</columns>
    <columns>OrderID__c</columns>
    <columns>Property__c</columns>
    <columns>PropertyValue__c</columns>
    <columns>ValuationType__c</columns>
    <columns>ValuationStatus__c</columns>
    <columns>Valuationdate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>